# llm2cmd

./: .gitignore  README.md  claudia_resume.txt  pyproject.toml
llm2cmd/: __main__.py  config.py  executor.py  ollama_client.py  repl.py  tools.py
tests/: test_executor.py  test_ollama_client.py  test_tools.py
