[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm2cmd"
version = "0.1.0"
description = "Pont entre llenguatge natural i comandes del sistema mitjançant Ollama."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Salvador Rueda" }]
license = { text = "MIT" }
dependencies = [
    "ollama>=0.3.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
llm2cmd = "llm2cmd.__main__:main"

[tool.setuptools.packages.find]
include = ["llm2cmd*"]
exclude = ["tests*", "venv*"]
